Update index.html added <br> for \n

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <audio id="music">
     <source src="chips.mp3" type="audio/mpeg">
   </audio>
-  <button id="startButton"> Push here to start. \n Use arrow keys or tilt phone to move. /n No copyright. No rights reserved </button>
+  <button id="startButton"> Push here to start. <br> Use arrow keys or tilt phone to move. <br> No copyright. No rights reserved </button>
 
   <script>
 
@@ -217,3 +217,4 @@
   </script>
 </body>
 </html>
+
