Update index.html full image translucent panel at end and start msg about hold pohne level and in landscape

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ marking the collapse of the studio that had defined the early console era.`;
         ctx.fillStyle = "white";
         ctx.fillRect(
           0,
-          canvas.height * 0.18,
+         0,
           canvas.width,
-          canvas.height * 0.65
+          canvas.height
         );
         ctx.restore();
 
@@ -333,5 +333,6 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
+
 
 
