--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
   <button id="startButton">
     Push here to start.<br>
-    Use arrow keys or tilt phone to move.<br>
+    Use arrow keys or hold phone flat<br>
+    and tilt to move.<br>
     No copyright. No rights reserved.
   </button>
 
@@ -333,6 +334,7 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
+
 
 
 
