--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
   <button id="startButton">
     Push here to start.<br>
-    Use arrow keys or hold phone flat<br>
+    Use arrow keys or hold phone flat <br>
+    with charging port to the right<br>
     and tilt to move.<br>
     No copyright. No rights reserved.
   </button>
@@ -334,6 +335,7 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
+
 
 
 
