--- a/index.html
+++ b/index.html
@@ -93,23 +93,18 @@
     const historyText =
 `Pac‑Man made its debut in 1980 — Namco released it in Japan in May of that year,
 and it quickly spread worldwide, becoming one of the most iconic arcade games ever.
-
 The TV show CHiPs, about California Highway Patrol officers Ponch and Jon,
 originally aired from 1977 to 1983 on NBC.
 
 PaCHiPs, designed to tantalizingly reveal the handsome and rugged looks
-of two LA boys - one from West Covina, the other Echo Park - 
-was released in 1982, thus missing out on the show's momentum.
+of two LA boys - one from West Covina, the other Echo Park.
 
-The poor timing of Pac‑Man’s PaCHiPs (and later E.T. the Extra‑Terrestrial)
-destroyed consumer trust, retailers slashed prices, 
-warehouses filled with unsold stock, Atari posted massive losses.
+Released in 1982 just before the last year of the show, its poor timing
+destroyed demand, retailers slashed prices, warehouses filled with unsold stock.
 
-By 1983, the company’s reputation was in tatters,
+Atari posted massive losses, by 1983, Atari's reputation was in tatters,
 the wider market collapsed under the weight of too many consoles and low‑quality games.
-
-Atari, once the fastest growing company in the U.S., 
-was split and sold off by its parent Warner Communications in 1984,
+Once the fastest growing company in the U.S., Atari was split off and sold by Warner,
 marking the collapse of the studio that had defined the early console era.`;
 
     function gameLoop() {
@@ -335,6 +330,7 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
+
 
 
 
