--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ marking the collapse of the studio that had defined the early console era.`;
         ctx.textAlign = "center";
 
         const lines = historyText.split("\n");
-        let y = canvas.height / 4;
+        let y = canvas.height * 0.07;
 
         lines.forEach(line => {
           ctx.fillText(line, canvas.width / 2, y);
@@ -330,6 +330,7 @@ marking the collapse of the studio that had defined the early console era.`;
   </script>
 </body>
 </html>
+
 
 
 
